tests/snapshots/snapshots_verbs__law_admit_admitted.snap
---
source: tests/snapshots_verbs.rs
assertion_line: 63
expression: result
---
{
  "status": "admitted",
  "state": "Admitted",
  "policy": "default"
}
