tests/snapshots/snapshots_verbs__law_admit_denied_halted.snap
---
source: tests/snapshots_verbs.rs
assertion_line: 71
expression: result
---
{
  "andon": {
    "Halted": {
      "unmet": [
        {
          "BlockingConstraint": {
            "reason": "stop"
          }
        }
      ],
      "refusals": [
        {
          "BlockingConstraint": {
            "reason": "stop"
          }
        }
      ],
      "at": "[ts]"
    }
  },
  "unmet": [
    {
      "BlockingConstraint": {
        "reason": "stop"
      }
    }
  ],
  "refusals": [
    {
      "BlockingConstraint": {
        "reason": "stop"
      }
    }
  ],
  "refusal_categories": [
    "lifecycle"
  ],
  "status": "denied",
  "verdict": "halted"
}
