tests/snapshots/snapshots_verbs__law_judge_prolog8_admitted.snap
---
source: tests/snapshots_verbs.rs
assertion_line: 55
expression: result
---
{
  "status": "judged",
  "law": "default",
  "verdict": "validated",
  "andon": "Green",
  "prolog8": {
    "atom": "admitted"
  }
}
