tests/snapshots/snapshots_verbs__law_judge_validated.snap
---
source: tests/snapshots_verbs.rs
assertion_line: 32
expression: result
---
{
  "status": "judged",
  "law": "default",
  "verdict": "validated",
  "andon": "Green"
}
