tests/snapshots/snapshots_verbs__law_promote_denied_needs_auditor.snap
---
source: tests/snapshots_verbs.rs
assertion_line: 108
expression: result
---
{
  "status": "denied",
  "reason": "promotion to REPLAYABLE requires an auditor",
  "from": "REFUSABLE",
  "to": "REPLAYABLE"
}
