tests/snapshots/snapshots_verbs__law_receipt_default_prev.snap
---
source: tests/snapshots_verbs.rs
expression: result
---
{
  "status": "receipted",
  "state": "Receipted",
  "chain_hash": "b8771e4bae00b181a7ae4ec708ecde772ed5cf43aa93b41c4b01083aa37de53e",
  "canonical": "blake3:b8771e4bae00b181a7ae4ec708ecde772ed5cf43aa93b41c4b01083aa37de53e",
  "prev_chain_hash": "0000000000000000000000000000000000000000000000000000000000000000",
  "payload_hash": "7eb500fca7774a3e1554f3dadadc0849cba84473e7eab0778b5fa9d5c1800eb8",
  "ts_ns": 42
}
