tests/snapshots/snapshots_verbs__law_receipt_deterministic.snap
---
source: tests/snapshots_verbs.rs
expression: result
---
{
  "status": "receipted",
  "state": "Receipted",
  "chain_hash": "db7fb47a014d69a50619f18c9a307eca725ae455e845b3755ff37bb7e64c2276",
  "canonical": "blake3:db7fb47a014d69a50619f18c9a307eca725ae455e845b3755ff37bb7e64c2276",
  "prev_chain_hash": "1111111111111111111111111111111111111111111111111111111111111111",
  "payload_hash": "7eb500fca7774a3e1554f3dadadc0849cba84473e7eab0778b5fa9d5c1800eb8",
  "ts_ns": 42
}
