tests/snapshots/snapshots_verbs__verify_verdict_reject_chain_integrity.snap
---
source: tests/snapshots_verbs.rs
expression: verdict
---
{
  "accepted": false,
  "profile": "default",
  "outcomes": [
    {
      "stage": "decode",
      "passed": true,
      "detail": "[decode detail]"
    },
    {
      "stage": "check_format",
      "passed": true,
      "detail": "2 record(s) well-formed"
    },
    {
      "stage": "chain_integrity",
      "passed": false,
      "detail": "record 0: recomputed chain hash does not match stored chain_hash (tamper detected)"
    },
    {
      "stage": "continuity",
      "passed": true,
      "detail": "2 record(s) monotonic"
    },
    {
      "stage": "verify_commitments",
      "passed": false,
      "detail": "record 1: prev_chain_hash (a7f2667d894adb2339a2d0d91ca780f769fbbde9cc7b96561793a5ec3adc5bda) does not commit to record 0's chain_hash (ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff)"
    },
    {
      "stage": "evaluate_profile",
      "passed": false,
      "detail": "profile 'default': one or more prior stages failed"
    }
  ],
  "reason": "record 0: recomputed chain hash does not match stored chain_hash (tamper detected)"
}
